ide/src/tests/solver/snapshots/ide__tests__solver__bfs_call_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (8) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (10) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (11) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 3) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (14) at (2, 3) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (4, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (4) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%3] (5) at (6, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (4, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (16) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%3] (17) at (6, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (4, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (19) at (5, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%3] (20) at (6, 2) {};
\node[font=\tiny] (note_3) at (2.5, 0.5) {Assign(3, 2)};
\node[font=\tiny] (note_4) at (2.5, 1.5) {Return([3])};
		\path[->] (0) edge (7);
		\path[->] (0) edge (6);
		\path[->] (2) edge (8);
		\path[->] (7) edge (11);
		\path[->] (6) edge (9);
		\path[->] (7) edge (10);
		\path[->] (9) edge node { } (12);
		\path[->] (10) edge node { } (13);
		\path[->] (4) edge (17);
		\path[->] (3) edge (15);
		\path[->] (4) edge (16);
		\path[->] (15) edge (18);
		\path[->] (16) edge (19);
		\path[->] (17) edge (20);
		\path[->, green] (9) [bend left] edge node { } (3);
		\path[->, green] (10) [bend left] edge node { } (4);
		\path[->, red] (18) [bend right] edge  node { } (12);
		\path[->, red] (20) [bend right] edge  node { } (14);


                \end{tikzpicture}
            \end{document}
