ide/src/tests/solver/snapshots/ide__tests__solver__bfs_functions_diff_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (2) at (2, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (3) at (3, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (8) at (2, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (9) at (3, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (11) at (1, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (12) at (2, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (13) at (3, 2) {};
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(2, 1)};
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (5, 0) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (6, 0) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (5, 1) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (15) at (6, 1) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (5, 2) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (6, 2) {};
\node[font=\tiny] (note_2) at (3.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_3) at (3.5, 1.5) {Return([0])};
		\path[->] (0) edge (7);
		\path[->] (0) edge (6);
		\path[->] (2) edge (8);
		\path[->] (3) edge (9);
		\path[->] (8) edge (13);
		\path[->] (6) edge (10);
		\path[->] (7) edge (11);
		\path[->] (8) edge (12);
		\path[->] (4) edge (15);
		\path[->] (4) edge (14);
		\path[->] (14) edge (16);
		\path[->] (15) edge (17);


                \end{tikzpicture}
            \end{document}
