ide/src/tests/solver/snapshots/ide__tests__solver__intra_reach.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%0",
        function: "test",
        pc: 1,
    },
    Taint {
        variable: "%1",
        function: "test",
        pc: 2,
    },
    Taint {
        variable: "%0",
        function: "test",
        pc: 2,
    },
    Taint {
        variable: "%0",
        function: "test",
        pc: 1,
    },
]
