ide/src/tests/solver/snapshots/ide__tests__solver__intra_reach_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%1] (8) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (4) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(1, 0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (4);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->] (0) edge (3);
		\path[->] (4) edge (7);
		\path[->] (4) edge (8);
		\path[->] (4) edge (7);
		\path[->] (4) edge (8);
		\path[->] (3) edge (6);


                \end{tikzpicture}
            \end{document}
