ide/src/tests/solver/snapshots/ide__tests__solver__test_gcd_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%12] (103) at (13, 27) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (102) at (14, 27) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (101) at (15, 27) { };
\node[circle,fill,inner sep=1pt,label=left:\%3] (100) at (4, 27) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (99) at (13, 26) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (98) at (14, 26) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (97) at (15, 26) { };
\node[circle,fill,inner sep=1pt,label=left:\%3] (96) at (4, 26) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (95) at (13, 25) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (94) at (14, 25) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (93) at (15, 25) { };
\node[circle,fill,inner sep=1pt,label=left:\%3] (92) at (4, 25) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (91) at (13, 24) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (90) at (14, 24) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (89) at (15, 24) { };
\node[circle,fill,inner sep=1pt,label=left:\%3] (88) at (4, 24) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (87) at (13, 23) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (86) at (14, 23) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (85) at (15, 23) { };
\node[circle,fill,inner sep=1pt,label=left:\%3] (84) at (4, 23) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (83) at (13, 22) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (82) at (15, 22) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (81) at (14, 22) { };
\node[circle,fill,inner sep=1pt,label=left:\%14] (80) at (15, 22) { };
\node[circle,fill,inner sep=1pt,label=left:\%11] (79) at (12, 21) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (78) at (13, 21) { };
\node[circle,fill,inner sep=1pt,label=left:\%2] (77) at (3, 21) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (76) at (14, 21) { };
\node[circle,fill,inner sep=1pt,label=left:\%11] (75) at (12, 20) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (74) at (13, 20) { };
\node[circle,fill,inner sep=1pt,label=left:\%13] (73) at (14, 20) { };
\node[circle,fill,inner sep=1pt,label=left:\%11] (72) at (12, 19) { };
\node[circle,fill,inner sep=1pt,label=left:\%12] (71) at (13, 19) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (70) at (0, 27) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (69) at (0, 26) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (68) at (0, 24) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (67) at (0, 23) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (66) at (0, 21) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (65) at (0, 20) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (64) at (0, 17) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (63) at (0, 15) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (62) at (0, 14) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (61) at (0, 13) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (60) at (0, 12) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (59) at (0, 25) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (58) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (57) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (56) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (55) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (54) at (0, 12) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (53) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (52) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (51) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (50) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (49) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (48) at (0, 18) { };
\node[circle,fill,inner sep=1pt,label=left:\%11] (47) at (12, 18) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (45) at (0, 27) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (44) at (0, 26) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (43) at (0, 25) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (42) at (0, 24) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (41) at (0, 23) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (40) at (0, 22) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (39) at (0, 21) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (38) at (0, 20) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (37) at (0, 19) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (36) at (0, 18) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (35) at (0, 17) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (34) at (0, 16) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (33) at (0, 15) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (0, 14) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (31) at (0, 13) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (30) at (0, 12) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (29) at (0, 11) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (28) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (27) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (25) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (22) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 17) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Block(1)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(4, 0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Assign(5, 1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {BinOp(6, 5, 4)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Conditional(6, [3, 4])};
\node[font=\tiny] (note_6) at (-1.5, 6.5) {Block(3)};
\node[font=\tiny] (note_7) at (-1.5, 7.5) {Assign(7, 0)};
\node[font=\tiny] (note_8) at (-1.5, 8.5) {Assign(2, 7)};
\node[font=\tiny] (note_9) at (-1.5, 9.5) {Kill(7)};
\node[font=\tiny] (note_10) at (-1.5, 10.5) {Jump(2)};
\node[font=\tiny] (note_11) at (-1.5, 11.5) {Jump(4)};
\node[font=\tiny] (note_12) at (-1.5, 12.5) {Block(4)};
\node[font=\tiny] (note_13) at (-1.5, 13.5) {Block(5)};
\node[font=\tiny] (note_14) at (-1.5, 14.5) {Assign(8, 1)};
\node[font=\tiny] (note_15) at (-1.5, 15.5) {Const(9, 0.0)};
\node[font=\tiny] (note_16) at (-1.5, 16.5) {Assign(10, 0)};
\node[font=\tiny] (note_17) at (-1.5, 17.5) {Assign(11, 1)};
\node[font=\tiny] (note_18) at (-1.5, 18.5) {BinOp(12, 11, 10)};
\node[font=\tiny] (note_19) at (-1.5, 19.5) {Assign(13, 12)};
\node[font=\tiny] (note_20) at (-1.5, 20.5) {Assign(2, 12)};
\node[font=\tiny] (note_21) at (-1.5, 21.5) {BinOp(14, 13, 12)};
\node[font=\tiny] (note_22) at (-1.5, 22.5) {Assign(3, 14)};
\node[font=\tiny] (note_23) at (-1.5, 23.5) {Assign(15, 1)};
\node[font=\tiny] (note_24) at (-1.5, 24.5) {Const(16, 0.0)};
\node[font=\tiny] (note_25) at (-1.5, 25.5) {Block(2)};
\node[font=\tiny] (note_26) at (-1.5, 26.5) {Return([15])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (22);
		\path[->, blue] (0) [bend right] edge  node { } (23);
		\path[->, blue] (0) [bend right] edge  node { } (24);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (0) [bend right] edge  node { } (26);
		\path[->, blue] (0) [bend right] edge  node { } (27);
		\path[->, blue] (0) [bend right] edge  node { } (28);
		\path[->, blue] (0) [bend right] edge  node { } (29);
		\path[->, blue] (0) [bend right] edge  node { } (30);
		\path[->, blue] (0) [bend right] edge  node { } (31);
		\path[->, blue] (0) [bend right] edge  node { } (32);
		\path[->, blue] (0) [bend right] edge  node { } (33);
		\path[->, blue] (0) [bend right] edge  node { } (34);
		\path[->, blue] (0) [bend right] edge  node { } (36);
		\path[->, blue] (0) [bend right] edge  node { } (37);
		\path[->, blue] (0) [bend right] edge  node { } (38);
		\path[->, blue] (0) [bend right] edge  node { } (39);
		\path[->, blue] (0) [bend right] edge  node { } (40);
		\path[->, blue] (0) [bend right] edge  node { } (41);
		\path[->, blue] (0) [bend right] edge  node { } (42);
		\path[->, blue] (0) [bend right] edge  node { } (43);
		\path[->, blue] (0) [bend right] edge  node { } (44);
		\path[->, blue] (0) [bend right] edge  node { } (45);
		\path[->, blue] (0) [bend right] edge  node { } (47);
		\path[->, blue] (0) [bend right] edge  node { } (71);
		\path[->, blue] (0) [bend right] edge  node { } (72);
		\path[->, blue] (0) [bend right] edge  node { } (73);
		\path[->, blue] (0) [bend right] edge  node { } (74);
		\path[->, blue] (0) [bend right] edge  node { } (75);
		\path[->, blue] (0) [bend right] edge  node { } (76);
		\path[->, blue] (0) [bend right] edge  node { } (77);
		\path[->, blue] (0) [bend right] edge  node { } (78);
		\path[->, blue] (0) [bend right] edge  node { } (79);
		\path[->, blue] (0) [bend right] edge  node { } (80);
		\path[->, blue] (0) [bend right] edge  node { } (81);
		\path[->, blue] (0) [bend right] edge  node { } (83);
		\path[->, blue] (0) [bend right] edge  node { } (84);
		\path[->, blue] (0) [bend right] edge  node { } (85);
		\path[->, blue] (0) [bend right] edge  node { } (86);
		\path[->, blue] (0) [bend right] edge  node { } (87);
		\path[->, blue] (0) [bend right] edge  node { } (88);
		\path[->, blue] (0) [bend right] edge  node { } (89);
		\path[->, blue] (0) [bend right] edge  node { } (90);
		\path[->, blue] (0) [bend right] edge  node { } (91);
		\path[->, blue] (0) [bend right] edge  node { } (92);
		\path[->, blue] (0) [bend right] edge  node { } (93);
		\path[->, blue] (0) [bend right] edge  node { } (94);
		\path[->, blue] (0) [bend right] edge  node { } (95);
		\path[->, blue] (0) [bend right] edge  node { } (96);
		\path[->, blue] (0) [bend right] edge  node { } (97);
		\path[->, blue] (0) [bend right] edge  node { } (98);
		\path[->, blue] (0) [bend right] edge  node { } (99);
		\path[->, blue] (0) [bend right] edge  node { } (100);
		\path[->, blue] (0) [bend right] edge  node { } (101);
		\path[->, blue] (0) [bend right] edge  node { } (102);
		\path[->, blue] (0) [bend right] edge  node { } (103);
		\path[->] (0) edge (18);
		\path[->] (18) edge (19);
		\path[->] (19) edge (20);
		\path[->] (20) edge (21);
		\path[->] (21) edge (22);
		\path[->] (22) edge (23);
		\path[->] (23) edge (24);
		\path[->] (24) edge (25);
		\path[->] (25) edge (26);
		\path[->] (26) edge (27);
		\path[->] (27) edge (28);
		\path[->] (28) edge (29);
		\path[->] (29) edge (30);
		\path[->] (30) edge (31);
		\path[->] (31) edge (32);
		\path[->] (32) edge (33);
		\path[->] (33) edge (34);
		\path[->] (34) edge (35);
		\path[->] (35) edge (36);
		\path[->] (36) edge (37);
		\path[->] (37) edge (38);
		\path[->] (38) edge (39);
		\path[->] (39) edge (40);
		\path[->] (40) edge (41);
		\path[->] (41) edge (42);
		\path[->] (42) edge (43);
		\path[->] (43) edge (44);
		\path[->] (44) edge (45);
		\path[->] (0) edge (47);
		\path[->] (0) edge (48);
		\path[->] (18) edge (49);
		\path[->] (19) edge (50);
		\path[->] (20) edge (51);
		\path[->] (21) edge (52);
		\path[->, bend right] (23) edge (53);
		\path[->, bend right] (23) edge (54);
		\path[->] (24) edge (55);
		\path[->] (25) edge (56);
		\path[->] (26) edge (57);
		\path[->] (27) edge (58);
		\path[->, bend right] (28) edge (59);
		\path[->, bend right] (29) edge (60);
		\path[->] (30) edge (61);
		\path[->] (31) edge (62);
		\path[->] (32) edge (63);
		\path[->] (34) edge (64);
		\path[->] (37) edge (65);
		\path[->] (38) edge (66);
		\path[->] (40) edge (67);
		\path[->] (41) edge (68);
		\path[->] (43) edge (69);
		\path[->] (44) edge (70);
		\path[->] (47) edge (71);
		\path[->] (47) edge (72);
		\path[->] (71) edge (73);
		\path[->] (71) edge (74);
		\path[->] (72) edge (75);
		\path[->] (73) edge (76);
		\path[->] (74) edge (77);
		\path[->] (74) edge (78);
		\path[->] (75) edge (79);
		\path[->] (76) edge (80);
		\path[->] (76) edge (81);
		\path[->] (78) edge (82);
		\path[->] (78) edge (83);
		\path[->] (80) edge (84);
		\path[->] (80) edge (85);
		\path[->] (81) edge (86);
		\path[->] (83) edge (87);
		\path[->] (84) edge (88);
		\path[->] (85) edge (89);
		\path[->] (86) edge (90);
		\path[->] (87) edge (91);
		\path[->] (88) edge (92);
		\path[->] (89) edge (93);
		\path[->] (90) edge (94);
		\path[->] (91) edge (95);
		\path[->] (92) edge (96);
		\path[->] (93) edge (97);
		\path[->] (94) edge (98);
		\path[->] (95) edge (99);
		\path[->] (96) edge (100);
		\path[->] (97) edge (101);
		\path[->] (98) edge (102);
		\path[->] (99) edge (103);


                \end{tikzpicture}
            \end{document}
